fix: replace z-index from 1 to 2 in .menu-widgets

--- a/frontend/src/components/TwitchEvents/style.css
+++ b/frontend/src/components/TwitchEvents/style.css
@@ -34,5 +34,5 @@
 .menu-widgets {
   position: absolute;
   right: 0;
-  z-index: 1;
+  z-index: 2;
 }
